--- a/SAE MS202 Tom Sikora Guillaume Darrozes.ipynb
+++ b/SAE MS202 Tom Sikora Guillaume Darrozes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "22de8e74",
+   "id": "ba2b3557",
    "metadata": {},
    "source": [
     "# SAÉ S2 : LABYRINTHES"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34082be5",
+   "id": "00158145",
    "metadata": {},
    "source": [
     "# Millésime 2023"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2302323b",
+   "id": "ff46809e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "cf2b8466",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from random import randint"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "5affcfa7",
+   "id": "f367139c",
    "metadata": {},
    "source": [
     "## 3 Implémentation"
@@ -42,8 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "f1217079",
+   "execution_count": 65,
+   "id": "72ebe15b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,13 +257,37 @@
     "        for i in range(len(voisins)):\n",
     "            if voisins[i] in self.neighbors[c1]:\n",
     "                        accessibles += [voisins[i]]\n",
-    "        return accessibles"
+    "        return accessibles\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def gen_btree(cls, h: int, w: int) -> list:\n",
+    "        \"\"\"\n",
+    "        Représentation d'un labyrinthe par algorithme de génération par arbre binaire.\n",
+    "        Retour:\n",
+    "             liste (list) : liste représentant un dictionnaire de cellule et de cellule(s) voisine(s)\n",
+    "        \"\"\"\n",
+    "        laby = Maze(h, w, empty = False)\n",
+    "        for i in range(h):\n",
+    "            for j in range(w):\n",
+    "                if (j != h-1) and (i == w-1):\n",
+    "                    laby.remove_wall((i, j), (i, j+1))\n",
+    "                elif (i != w-1) and (j == h-1):\n",
+    "                    laby.remove_wall((i, j), (i+1, j))\n",
+    "                elif (i != w-1) and (j != h-1):\n",
+    "                    hasard = randint(0,1)\n",
+    "                    if hasard == 0:\n",
+    "                        laby.remove_wall((i, j), (i, j+1))\n",
+    "                    else:\n",
+    "                        laby.remove_wall((i, j), (i+1, j))\n",
+    "        return laby\n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "8884898c",
+   "id": "ccb289e2",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "11b17e9e",
+   "id": "68e9499b",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "435015b3",
+   "id": "0918e5da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "588d259f",
+   "id": "688ddc54",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "e43102b7",
+   "id": "b5c7a5a1",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "6d01b55d",
+   "id": "bb9ccf71",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "010cd8d2",
+   "id": "6efb6d65",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "f8fa8cb2",
+   "id": "3d214a6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "5a5ef3cd",
+   "id": "df049f43",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "ee039b47",
+   "id": "9804b1c1",
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "8f6f2e6e",
+   "id": "a9cb4f0d",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "fe1e3a9e",
+   "id": "8ecc4b12",
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "f9f70957",
+   "id": "eae259e5",
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4627e5d2",
+   "id": "0f9ad05f",
    "metadata": {},
    "source": [
     "## 4 Manipulation de labyrinthes"
@@ -598,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "ca95fd45",
+   "id": "51147660",
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "443dcbbc",
+   "id": "47f15890",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "84477b67",
+   "id": "10ab25b1",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "0b9b1cc8",
+   "id": "c40b5b88",
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "189d988c",
+   "id": "c57692b8",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "2f9ec25a",
+   "id": "890a7abf",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "456f4a1e",
+   "id": "2e6e3b01",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "5d901a0f",
+   "id": "3444d134",
    "metadata": {},
    "outputs": [
     {
@@ -803,9 +837,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9fe782e",
+   "metadata": {},
+   "source": [
+    "## 5 Génération"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15565332",
+   "metadata": {},
+   "source": [
+    "### 5.1 Arbre binaire"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "6cddacb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "┏━━━┳━━━┳━━━┳━━━┓\n",
+      "┃   ┃   ┃       ┃\n",
+      "┣   ╋   ╋━━━╋   ┫\n",
+      "┃   ┃       ┃   ┃\n",
+      "┣   ╋━━━╋   ╋   ┫\n",
+      "┃       ┃       ┃\n",
+      "┣━━━╋   ╋━━━╋   ┫\n",
+      "┃               ┃\n",
+      "┗━━━┻━━━┻━━━┻━━━┛\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "laby = Maze.gen_btree(4, 4)\n",
+    "print(laby)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25e1c16f",
+   "id": "2f77bf54",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -813,7 +891,135 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22841677",
+   "id": "1d88d230",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "967e0494",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a03a2111",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84ef18fa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0449e09d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ef27422",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe58edbb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1c96b75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2339fec2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7be88b2e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb346a3d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65626ded",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e3177c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64c24487",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfb49c70",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea7513b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec4f5dce",
    "metadata": {},
    "outputs": [],
    "source": []
